--- a/app/src/main/res/layout/layout_teacher_card_small.xml
+++ b/app/src/main/res/layout/layout_teacher_card_small.xml
@@ -11,7 +11,6 @@
         android:layout_margin="3dp"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:paddingRight="20dp"
         android:paddingLeft="10dp"
 
         android:orientation="horizontal" >
@@ -36,6 +35,7 @@
             <RatingBar
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
+                android:layout_marginRight="20dp"
                 android:scaleX="1.1"
                 android:scaleY="1.1"
                 android:numStars="5"
