--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4F4295</color>
+    <color name="colorPrimaryDark">#3E3184</color>
+    <color name="colorAccent">#AD188D</color>
+    <color name="drawer_bg">#853795</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#888888</color>
 </resources>
