--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,30 +22,59 @@
             android:textStyle="bold"
             android:text="@string/header_sign_up"/>
 
+        <TextView
+            android:id="@+id/email_error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:textColor="@color/error"
+            android:visibility="invisible" />
+
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="50dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:inputType="textEmailAddress"
             android:hint="@string/hint_email"
             android:background="@color/colorPrimaryLight"/>
 
+        <TextView
+            android:id="@+id/password_invalid_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="@string/password_invalid"
+            android:textColor="@color/error"
+            android:visibility="invisible"/>
+
         <EditText
+            android:id="@+id/password1"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="20dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:inputType="textPassword"
             android:hint="@string/hint_password"
             android:background="@color/colorPrimaryLight"/>
 
+        <TextView
+            android:id="@+id/password_match_error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="@string/password_not_match"
+            android:textColor="@color/error"
+            android:visibility="invisible"/>
+
         <EditText
+            android:id="@+id/password2"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="20dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:inputType="textPassword"
@@ -53,6 +82,7 @@
             android:background="@color/colorPrimaryLight"/>
 
         <Button
+            android:id="@+id/button_sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -64,12 +94,13 @@
             android:background="@color/button_bg"/>
 
         <TextView
+            android:id="@+id/button_sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:textSize="15sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="@string/sign_in"/>
 
     </LinearLayout>
